# services/api-gateway/docs/swagger.json
@@ -1430,7 +1430,7 @@
                     "200": {
                         "description": "User Profile",
                         "schema": {
-                            "type": "object"
+                            "$ref": "#/definitions/handlers.UserResponse"
                         }
                     }
                 }
@@ -1475,7 +1475,7 @@
                     "200": {
                         "description": "Updated User",
                         "schema": {
-                            "type": "object"
+                            "$ref": "#/definitions/handlers.UserResponse"
                         }
                     }
                 }
@@ -1652,6 +1652,26 @@
                 },
                 "sensor_type_id": {
                     "type": "integer"
+                }
+            }
+        },
+        "handlers.UserResponse": {
+            "type": "object",
+            "properties": {
+                "email": {
+                    "type": "string"
+                },
+                "first_name": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "last_name": {
+                    "type": "string"
+                },
+                "username": {
+                    "type": "string"
                 }
             }
         }
